<resources>
    <string name="app_name">the-movie-app</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_search">Search</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_genre">Genre</string>
    <string name="title_genre_movies">Movies Genre</string>
    <string name="title_movies_details">Movies details</string>
    <string name="title_movie_reviews">Movie reviews</string>
    <string name="title_movie_youtube">Movie video</string>
    <string name="title_about">About</string>
    <string name="home_second">Home Second</string>
    <string name="movie_image">movie image</string>
    <string name="videos">VIDEOS</string>
    <string name="cast">CAST</string>
    <string name="video">video</string>
    <string name="cast_image">cast image</string>
    <string name="popular">Popular</string>
    <string name="show_all">Show all</string>
    <string name="in_theaters">In Theaters</string>
    <string name="upcoming">Upcoming</string>
    <string name="show_reviews">Show reviews</string>
    <string name="view_more">View More</string>
    <string name="latest">Latest</string>
    <string name="title_genres">Genres</string>
    <string name="title_favorite">Favorite</string>
    <string name="movie_genre">Movies of genre</string>
    <string name="movie_review">Reviews for</string>
    <string name="label_input_search">Search</string>
    <string name="no_content">No contents</string>
    <string name="popularity_asc">Popularity ascendant</string>
    <string name="release_date_asc">Release date ascendant</string>
    <string name="original_title_asc">Original title ascendant</string>
    <string name="vote_average_asc">Vote average ascendant</string>
    <string name="vote_count_asc">Vote count ascendant</string>
    <string name="popularity_desc">Popularity descendant</string>
    <string name="release_date_desc">Release date descendant</string>
    <string name="original_title_desc">Original title descendant</string>
    <string name="vote_average_desc">Vote average descendant</string>
    <string name="vote_count_desc">Vote count descendant</string>
    <string name="show_all_title">Show all</string>
    <string name="top_rated">Top rated</string>
    <string name="label_input_password">Password</string>
    <string name="label_input_username">Username</string>
    <string name="my_rating">MY RATING</string>
    <string name="rate_button">VOTE</string>
    <string name="auth_submit">LOGIN</string>
</resources>