<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_genres"
        android:icon="@drawable/ic_baseline_category_24"
        android:title="@string/title_genres" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_about" />

</menu>
